gitops/stages/070-advanced-app-platform/base/devspaces/migration-workspace-name-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: migration-workspace-run-name
  labels:
    app.kubernetes.io/part-of: devspaces
    app.kubernetes.io/component: workspace-policy
  annotations:
    argocd.argoproj.io/sync-wave: "11"
spec:
  policyName: migration-workspace-run-name
  validationActions: [Deny]
